--- a/index.html
+++ b/index.html
@@ -47,34 +47,35 @@
             </div>
             <div class="container">
                 <div class="card-p-one">
-                    <a href="https://seifenan.github.io/c1-horiseon-refractoring/" target="_blank"><img class="p-one-img" src="./assets/images/horiseon.jpg" alt="Horiseon Project Image" width="100%"></a>
+                    <a href="https://seifenan.github.io/c1-horiseon-refractoring/" target="_blank"><img class="p-one-img" src="./assets/images/p1.jpg" alt="Image of Project 1: Horiseon" width="100%"></a>
                     <h3>Horiseon</h3>
                     <p>Horiseon is a marketing agency that has developed tools to allow you to take back control of your business and gain an edge!</p>
                 </div>
                 <div class="card-p-two">
-                    <a href="" target="_blank"><img src="./assets/images/p.jpg" alt="Image of Project 2" width="100%"></a>
-                    <h3>Run Buddy</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere, commodi quas aliquid sequi impedit sunt recusandae corporis iste. Nobis hic architecto impedit eius atque sit expedita cumque ut qui odio.</p>
+                    <a href="https://seifenan.github.io/p2-practice-rpc-game/" target="_blank"><img src="./assets/images/p2.png" alt="Image of Project 2: Rock Paper Scissors game" width="100%"></a>
+                    <h3>Rock Paper Scissors!</h3>
+                    <p>Tasked with creating a simple Rock Paper Scissors game using functions.</p>
+                    <p>User vs PC; Best out of 3!</p>
                 </div>
                 <div class="card-p-three">
-                    <a href="" target="_blank"><img src="./assets/images/p.jpg" alt="Image of Project 3" width="100%"></a>
-                    <h3>Project 3</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere, commodi quas aliquid sequi impedit sunt recusandae corporis iste. Nobis hic architecto impedit eius atque sit expedita cumque ut qui odio.</p>
+                    <a href="https://seifenan.github.io/p3-practice-cssVariables/" target="_blank"><img src="./assets/images/p3.png" alt="Image of Project 3: CSS Variables" width="100%"></a>
+                    <h3>CSS Variables</h3>
+                    <p>I was tasked with extracting the colors into CSS Variables & replacing the corresponding occurrences of the color hex codes with the new CSS variables.</p>
                 </div>
                 <div class="card-p-four">
-                    <a href="" target="_blank"><img src="./assets/images/p.jpg" alt="Image of Project 4" width="100%"></a>
-                    <h3>Project 4</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere, commodi quas aliquid sequi impedit sunt recusandae corporis iste. Nobis hic architecto impedit eius atque sit expedita cumque ut qui odio.</p>
+                    <a href="https://seifenan.github.io/p4-practice-pseudo-classes/" target="_blank"><img src="./assets/images/p4.png" alt="Image of Project 4: Pseudo Classes" width="100%"></a>
+                    <h3>Pseudo Element Selectors</h3>
+                    <p>I was tasked with styling specific elements using pseudo-classes.</p>
                 </div>
                 <div class="card-p-five">
-                    <a href="" target="_blank"><img src="./assets/images/p.jpg" alt="Image of Project 5" width="100%"></a>
-                    <h3>Project 5</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere, commodi quas aliquid sequi impedit sunt recusandae corporis iste. Nobis hic architecto impedit eius atque sit expedita cumque ut qui odio.</p>
+                    <a href="https://seifenan.github.io/p5-practice-conditional-statements/" target="_blank"><img src="./assets/images/p5.png" alt="Image of Project 5: Conditional Statements" width="100%"></a>
+                    <h3>Conditional Statements</h3>
+                    <p>I was tasked with creating a conditional statement to offer the user a Cheese Burger or a Veggie Burger.</p>
                 </div>
                 <div class="card-p-six">
-                    <a href="" target="_blank"><img src="./assets/images/p.jpg" alt="Image of Project 6" width="100%"></a>
-                    <h3>Project 6</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere, commodi quas aliquid sequi impedit sunt recusandae corporis iste. Nobis hic architecto impedit eius atque sit expedita cumque ut qui odio.</p>
+                    <a href="https://seifenan.github.io/p6-practice-brokencode/" target="_blank"><img src="./assets/images/p6.png" alt="Image of Project 6: Broken Code" width="100%"></a>
+                    <h3>Broken Code</h3>
+                    <p>I was tasked with identifying broken code by comparing it to similar working code.</p>
                 </div>
             </div>
         </section>
